[package]
name = "infinite"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["advanced", "canvas"] }
iced_graphics = { version = "0.13", features = ["geometry"] }

[[example]]
name = "graph"
path = "examples/graph.rs"

[[example]]
name = "tree"
path = "examples/tree/tree.rs"

[[example]]
name = "fractal"
path = "examples/fractal.rs"

[dev-dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[[example]]
name = "paint"
path = "examples/paint/paint.rs"

[[example]]
name = "alt"
path = "examples/alt.rs"
